--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,3 +1,208 @@
+@import "~bootstrap/scss/bootstrap";
+@import "../fonts/Belleza/stylesheet.css";
+@import "../fonts/Bhavuka/stylesheet.css";
+@import "../fonts/Quicksand/stylesheet.css";
+@import "../fonts/Bodoni Old Face BE Small Caps  Regular/stylesheet.css";
+
 body {
+  font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #aeb8d0;
+  font-size: 12px;
+}
+
+.container-fluid {
+  max-width: 992px;
+}
+
+a {
+  color: #cbcbcb;
+  @include transition(0.2s);
+  @include hover-focus-active {
+    color: #fff;
+    text-decoration: none;
+  }
+}
+
+.bst-page {
+  background-image: url("../images/herbs_pattern_3-compressor.jpg");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: contain;
+  min-height: 100vh;
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(24, 24, 24, 0.8);
+  }
+}
+
+.bst-header {
+  padding: 20px 0;
+  @include media-breakpoint-up(md) {
+    padding: 50px 15px;
+  }
+}
+
+.book-ul {
+  color: #af9572;
+  margin: 0;
+  padding: 0;
+  font-size: 17px;
+  top: 44%;
+  right: 20%;
+  font-family: "Bhavuka", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+  line-height: 21px;
+  @include media-breakpoint-up(md) {
+    line-height: 34px;
+    font-size: 27px;
+    top: 49%;
+  }
+}
+
+.font-belleza {
+  font-family: "Belleza", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.bst-social {
+  line-height: 1;
+  a {
+    width: 22px;
+    height: 22px;
+    font-size: 18px;
+    &.insta-anchor {
+      font-size: 22px;
+    }
+  }
+  //.fa-facebook-f {
+  //  font-size: 16px;
+  //}
+  .list-inline-item:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+
+.bst-book--image {
+  width: 100%;
+  height: auto;
+  max-width: 290px;
+  @include media-breakpoint-up(md) {
+    max-width: 576px;
+  }
+}
+
+.bst-main {
+  .bst-social {
+    margin-top: 64px;
+    a {
+      width: 36px;
+      height: 36px;
+    }
+  }
+  .fa-facebook-f {
+    font-size: 30px;
+  }
+  .fa-instagram {
+    font-size: 36px;
+  }
+}
+
+.bst-logo {
+  position: absolute;
+  max-width: 40%;
+  left: 37%;
+  top: 24%;
+  @include media-breakpoint-up(md) {
+    position: absolute;
+    max-width: 46%;
+    left: 34%;
+    top: 26%;
+  }
+}
+
+.book-footer {
+  text-transform: uppercase;
+  color: #af9572;
+  bottom: 22%;
+  left: 50%;
+  transform: translateX(-43%);
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  line-height: 22px;
+  @include media-breakpoint-up(md) {
+    bottom: 18%;
+  }
+}
+
+.bst-coming-soon {
+  font-size: 19px;
+  margin: 0;
+  @include media-breakpoint-up(md) {
+    font-size: 28px;
+  }
+}
+
+.bst-avenue {
+  position: relative;
+  font-family: "Bodoni Old Face BE", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  margin-bottom: 0;
+  margin-top: 10px;
+  font-size: 11px;
+  @include media-breakpoint-up(md) {
+    font-size: 19px;
+    margin-top: 20px;
+  }
+}
+
+footer {
+  padding: 20px 0;
+}
+
+footer p {
+  font-weight: 500;
+}
+
+.ot-dtp-picker {
+  &.wide {
+    width: 100% !important;
+    .ot-dtp-picker-form {
+      display: flex;
+      align-items: center;
+      .ot-dtp-picker-button {
+        float: none !important;
+        height: 100%;
+        line-height: 1;
+        width: 100% !important;
+        @include media-breakpoint-up(sm) {
+          max-width: 25%;
+        }
+      }
+    }
+  }
+  .ot-dtp-picker-selector {
+    flex: 1 0 100%;
+    float: none;
+    width: 100%;
+    @include media-breakpoint-up(sm) {
+      flex: 1 0 25%;
+    }
+  }
 }
